# Proyecto_Optimizacion

./: README.md
Paquete_Optimizacion_Mike/: README.md  pyproject.toml
Paquete_Optimizacion_Mike/Paquete_Optimizacion_Mike.egg-info/: PKG-INFO  SOURCES.txt
Paquete_Optimizacion_Mike/scr/Codigos/: Funciones_prueba.py  Multivariadas.py  Univariable.py
