[project]
name = "Paquete_Optimizacion_Mike"
version = "0.0.1"
authors = [
  { name="Example Author", email="ux21ii048@ux.edu.mx" },
]
description = "Proyecto de Optimizacion, donde encontraran 9 algoritmos de Optimizacion basicos"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MiguelMAC9/Proyecto_Optimizacion"
Issues = "https://github.com/pypa/sampleproject/issues"